%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
%% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
\section{Changes in version 1.8-0 (2024-05-13 r4757)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item This version will introduce integer matrices, complex
      matrices, and complex factorizations.  Names and definitions of
      factorization classes may change to support the generalization.
      It is currently under active development and until it stabilizes
      users should consider installing \pkg{Matrix} versions 1.7-z
      instead.
    }
  }
  \subsection{New Features}{
    \itemize{
      \item .
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item .
    }
  }
  \subsection{Misc}{
    \itemize{
      \item .
    }
  }
}

\section{Changes in version 1.7-1 (2024-04-11 r4951)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item .
    }
  }
  \subsection{New Features}{
    \itemize{
      \item .
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item .
    }
  }
  \subsection{Misc}{
    \itemize{
      \item Registered routine \code{sexp_as_cholmod_factor} no
      longer calls \code{cholmod_check_factor} before returning,
      leaving the decision to check to the caller.  Accordingly,
      most \code{cholmod_check_*} are now registered, though packages
      calling them must use \code{LinkingTo: Matrix (>= 1.7-1)}.
    }
  }
}

\section{Changes in version 1.7-0 (2024-03-16 r4662)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item The internal collection of SuiteSparse libraries is updated
      from version 5.10.1 to version 7.6.0.  Hence the \pkg{Matrix} ABI
      version is incremented from 1 to 2.  Reverse \code{LinkingTo}
      built under earlier versions of \pkg{Matrix} should be rebuilt